# vrdio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.qrc
src/: main.cpp  pamanager.cpp  pamanager.h  strs.h  vrmanager.cpp  vrmanager.h
src/qml/: HeaderText.qml  VRComboBox.qml  VolumeSlider.qml  main.qml
